hphp/hack/test/package/package_access/illegal_cross_package_with_requirepackage_attr1.php
//// a.php
<?hh
// package pkg1

class A {
  public function test() : void {
    test(); // error
  }
}
<<__RequirePackage("pkg2")>>
function test(): void {}
